Fix broken CSS from removed clear_floats mixin

--- a/app/assets/stylesheets/transformation_admin/_general.scss
+++ b/app/assets/stylesheets/transformation_admin/_general.scss
@@ -133,8 +133,8 @@ main {
 }
 
 .content-meta {
-  @include clear_floats;
   margin-bottom: $spacing-3;
+  overflow: hidden;
   position: relative;
   top: -$spacing-3;
 
