--- a/app/assets/stylesheets/transformation_admin/pages/help.scss
+++ b/app/assets/stylesheets/transformation_admin/pages/help.scss
@@ -44,7 +44,6 @@
   }
 
   ol {
-    @include clear-floats;
     -moz-column-count: 2;
     -webkit-column-count: 2;
     column-count: 2;
@@ -57,8 +56,8 @@
 }
 
 .article-pagination {
-  @include clear-floats;
   margin-bottom: $spacing-2;
+  overflow: hidden;
 
   a {
     text-decoration: none;
